form area adjusted to fit

--- a/contact.html
+++ b/contact.html
@@ -64,22 +64,15 @@
                 <!-- main body which is on right side of the subheading, on small screen will take whole page width -->
                 <div class="col-md-10 col-12 bg-white">
                     <div class="row">
-                        <div class="col">
-                            <form id="contact-form">
-                                <input type="text" name="name" id="fullname" class="form-control" placeholder="Name"
-                                    required />
-                                <input type="email" name="email" id="emailaddress" class="form-control"
-                                    placeholder="Email" required />
-                                <textarea rows="5" name="message" id="message" class="form-control"
-                                    placeholder="Your message..." required></textarea>
-                                <!-- boostrap button-->
-                                <div class="form-row text-center">
-                                    <div class="col">
-                                        <button type="submit" class="btn btn-secondary">Send Message</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
+                        <form id="contact-form">
+                            <input type="text" name="name" id="fullname" class="form-control font-form font-black"
+                                placeholder="Name" required />
+                            <input type="email" name="email" id="emailaddress" class="form-control font-form font-black"
+                                placeholder="Email" required />
+                            <textarea rows="6" name="message" id="message" class="form-control font-form font-black"
+                                placeholder="Your message..." required></textarea>
+                            <button type="submit" class="button-send font-subheading">Send Message</button>
+                        </form>
                     </div>
                 </div>
             </div>
