--- a/index.html
+++ b/index.html
@@ -17,8 +17,57 @@
 
 <body>
     <header>
+        <!--Navbar visible only on XS screens-->
+        <nav class="navbar navbar-dark bg-dark d-block d-sm-none">
+            <!-- Navbar brand -->
+            <div class="navbar-brand">
+                <h1 class="font-navigation-lrg active"><i class="fas fa-home space"></i> Home Page</h1>
+            </div>
+
+            <!-- Collapse button -->
+            <div style="position: absolute; top: 25px; right: 15px;">
+                <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false"
+                    aria-label="Toggle navigation"><span><i class="fas fa-bars"
+                            style="color: white; font-size: 42px;"></i></span></button>
+            </div>
+
+            <!-- Collapsible content -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+
+                <!-- Links -->
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link font-navigation" href="index.html" style="color: orange !important;"><i
+                                class="fas fa-home space"></i> Home Page <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link font-navigation" href="music.html"><i class="fas fa-music space"></i> Music +
+                            Videos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link font-navigation"
+                            href="https://www.ticketmaster.co.uk/ed-sheeran-tickets/artist/1560779" target="_blank"><i
+                                class="fas fa-ticket-alt space"></i> Book Tickets</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link font-navigation" href="contact.html"><i class="fas fa-comments space"></i>
+                            Contact Us</a>
+                    </li>
+                </ul>
+                <!-- Links -->
+
+            </div>
+            <!-- Collapsible content -->
+
+        </nav>
+        <!--/.Navbar-->
+
+
+
+
         <!-- this part below contains the logo and navigation bar, with a grey top and bottom border -->
-        <div class="container-fluid no-gutters section-padding border-grey">
+        <div class="container-fluid no-gutters section-padding border-grey" style="padding: 0px;">
             <div class="row">
                 <!-- black space on left of logo -->
                 <div class="col-1 bg-black">
@@ -30,14 +79,17 @@
                 <div class="col-1 bg-black">
                 </div>
             </div>
-            <!-- navigation bar starts here -->
-            <div class="row navigation font-white font-navigation">
+
+
+            <!-- navigation bar starts here for all sizes except XS it is hidden-->
+            <div class="row navigation font-white font-navigation d-none d-sm-block">
                 <!-- black space on left of navigation bar which hides when the screen gets smaller -->
                 <div class="col-lg-2 d-none d-lg-block bg-black">
                 </div>
                 <!-- navigation buttons with font-awesome icons, reduces from horizontal to vertical alignment when screen gets smaller -->
                 <!-- each hyperlink has a hover-effect through the main css stylesheet, that will glow orange when hovered over -->
-                <a href="index.html" class="col-lg-2 col-md-3 col-sm-6 col-12 bg-black hover-glow">
+                <!-- the class "active" is used on the active pages, that will keep the icon orange so the user knows which page they are on -->
+                <a href="index.html" class="col-lg-2 col-md-3 col-sm-6 col-12 bg-black hover-glow active">
                     <i class="fas fa-home space"></i> Home Page
                 </a>
                 <a href="music.html" class="col-lg-2 col-md-3 col-sm-6 col-12 bg-black hover-glow">
@@ -55,6 +107,8 @@
                 <div class="col-md-2 d-none d-lrg-block bg-black">
                 </div>
             </div>
+
+
         </div>
     </header>
     <section>
@@ -62,7 +116,7 @@
         <div class="container-fluid no-gutters">
             <div class="row">
                 <!-- this is the left column that is divided into two rows -->
-                <div class="col-md-4 col-sm-6 col-12">
+                <div class="col-md-6 col-12">
                     <div class="row">
                         <!-- this is the subheading of left column (top row) -->
                         <div class="col bg-grey">
@@ -77,50 +131,100 @@
                     </div>
                 </div>
                 <!-- this is the right column below, that contains photos.  On a small screen the photos take up full width of screen -->
-                <div id="photos" class="carousel slide col-md-8 col-sm-6 col-12" data-ride="carousel">
+                <div id="photos" class="carousel slide col-md-6 col-12" data-ride="carousel">
                     <div class="carousel-inner">
                         <!-- this is the first image, which is active -->
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="assets/images/1.jpg" alt="1st Picture of Ed Sheeran">
+                            <div class="carousel-caption">
+                                <div>
+                                    <h2>Caption Text Here</h2>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/images/2.jpg" alt="2nd Picture of Ed Sheeran">
+                                <div class="carousel-caption">
+                                    <div>
+                                        <h2>Caption Text Here</h2>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="assets/images/3.jpg"
+                                        alt="3rd Picture of Ed Sheeran">
+                                    <div class="carousel-caption">
+                                        <div>
+                                            <h2>Caption Text Here</h2>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src="assets/images/4.jpg"
+                                            alt="4th Picture of Ed Sheeran">
+                                        <div class="carousel-caption">
+                                            <div>
+                                                <h2>Caption Text Here</h2>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="d-block w-100" src="assets/images/5.jpg"
+                                                alt="5th Picture of Ed Sheeran">
+                                            <div class="carousel-caption">
+                                                <div>
+                                                    <h2>Caption Text Here</h2>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img class="d-block w-100" src="assets/images/6.jpg"
+                                                    alt="6th Picture of Ed Sheeran">
+                                                <div class="carousel-caption">
+                                                    <div>
+                                                        <h2>Caption Text Here</h2>
+                                                    </div>
+                                                </div>
+                                                <div class="carousel-item">
+                                                    <img class="d-block w-100" src="assets/images/7.jpg"
+                                                        alt="7th Picture of Ed Sheeran">
+                                                    <div class="carousel-caption">
+                                                        <div>
+                                                            <h2>Caption Text Here</h2>
+                                                        </div>
+                                                    </div>
+                                                    <div class="carousel-item">
+                                                        <img class="d-block w-100" src="assets/images/8.jpg"
+                                                            alt="8th Picture of Ed Sheeran">
+                                                        <div class="carousel-caption">
+                                                            <div>
+                                                                <h2>Caption Text Here</h2>
+                                                            </div>
+                                                        </div>
+                                                        <!-- below are the back and forward arrow buttons, for changing the photos -->
+                                                    </div>
+                                                    <a class="carousel-control-prev" href="#photos" role="button"
+                                                        data-slide="prev">
+                                                        <span class="carousel-control-prev-icon"
+                                                            aria-hidden="true"></span>
+                                                        <span class="sr-only">Previous</span>
+                                                    </a>
+                                                    <a class="carousel-control-next" href="#photos" role="button"
+                                                        data-slide="next">
+                                                        <span class="carousel-control-next-icon"
+                                                            aria-hidden="true"></span>
+                                                        <span class="sr-only">Next</span>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/images/2.jpg" alt="2nd Picture of Ed Sheeran">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/images/3.jpg" alt="3rd Picture of Ed Sheeran">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/images/4.jpg" alt="4th Picture of Ed Sheeran">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/images/5.jpg" alt="5th Picture of Ed Sheeran">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/images/6.jpg" alt="6th Picture of Ed Sheeran">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/images/7.jpg" alt="7th Picture of Ed Sheeran">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/images/8.jpg" alt="8th Picture of Ed Sheeran">
-                        </div>
-                        <!-- below are the back and forward arrow buttons, for changing the photos -->
                     </div>
-                    <a class="carousel-control-prev" href="#photos" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#photos" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
                 </div>
             </div>
         </div>
     </section>
     <footer>
         <!-- this part contains all the social media links, with a grey top and bottom border -->
-        <div class="container-fluid no-gutters section-padding border-grey">
+        <div class="container-fluid no-gutters border-grey">
             <div class="row social-media bg-black font-white font-heading">
                 <!-- black space on left which hides when the screen gets smaller -->
                 <div class="col-md-3 d-none d-md-block bg-black">
@@ -128,7 +232,7 @@
                 <!-- navigation links with font-awesome icons, using the same orange glow hover effect as navigation bar -->
                 <!-- each link is external website, so opens in a new window to avoid confusion for user -->
                 <!-- the links show in 1 row of 6 on large screen, and reduces to 2 rows of 3 on small screen -->
-                <a class="col-md-1 col-4 hover-glow" target="_blank"
+                <a class="col-md-1 col-2 hover-glow" target="_blank"
                     href="https://www.facebook.com/pages/Ed-Sheeran/9189674485">
                     <!-- each link is an icon using the <i> tag -->
                     <!-- aria-hidden is enabled, so this doesn't confuse any Screen Readers -->
@@ -136,25 +240,25 @@
                     <!-- this will display the name of website for Screen Readers only -->
                     <span class="sr-only">Facebook</span>
                 </a>
-                <a class="col-md-1 col-4 hover-glow" target="_blank" href="https://www.instagram.com/teddysphotos/">
+                <a class="col-md-1 col-2 hover-glow" target="_blank" href="https://www.instagram.com/teddysphotos/">
                     <i class="fab fa-instagram" aria-hidden="true"></i>
                     <span class="sr-only">Instagram</span>
                 </a>
-                <a class="col-md-1 col-4 hover-glow" target="_blank" href="https://twitter.com/edsheeran">
+                <a class="col-md-1 col-2 hover-glow" target="_blank" href="https://twitter.com/edsheeran">
                     <i class="fab fa-twitter" aria-hidden="true"></i>
                     <span class="sr-only">Twitter</span>
                 </a>
-                <a class="col-md-1 col-4 hover-glow" target="_blank"
+                <a class="col-md-1 col-2 hover-glow" target="_blank"
                     href="https://open.spotify.com/artist/6eUKZXaKkcviH0Ku9w2n3V">
                     <i class="fab fa-spotify" aria-hidden="true"></i>
                     <span class="sr-only">Spotify</span>
                 </a>
-                <a class="col-md-1 col-4 hover-glow" target="_blank"
+                <a class="col-md-1 col-2 hover-glow" target="_blank"
                     href="https://music.apple.com/gb/artist/ed-sheeran/183313439">
                     <i class="fab fa-apple" aria-hidden="true"></i>
                     <span class="sr-only">Apple Store</span>
                 </a>
-                <a class="col-md-1 col-4 hover-glow" target="_blank" href="https://www.youtube.com/user/EdSheeran">
+                <a class="col-md-1 col-2 hover-glow" target="_blank" href="https://www.youtube.com/user/EdSheeran">
                     <i class="fab fa-youtube" aria-hidden="true"></i>
                     <span class="sr-only">Youtube</span>
                 </a>
