fixed picture slideshow, and spotify music

--- a/music.html
+++ b/music.html
@@ -75,9 +75,11 @@
                             </div>
                             <div class="row">
                                 <!-- audio control with link to the local media file -->
-                                <div class="col audio-container">
-                                    <iframe src="https://open.spotify.com/embed/album/7jfNbUImln4VF01QtMpe0q" width="250" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media">
-                                    <!-- alternate text in case browser does not support playing mp3s -->    
+                                <div class="col">
+                                    <iframe src="https://open.spotify.com/embed/album/7jfNbUImln4VF01QtMpe0q"
+                                        width="250" height="80" frameborder="0" allowtransparency="true"
+                                        allow="encrypted-media">
+                                        <!-- alternate text in case browser does not support playing mp3s -->
                                         Your browser does not support iFrames
                                     </iframe>
                                 </div>
@@ -90,11 +92,12 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col audio-container">
-                                    <audio controls>
-                                        <source src="assets/music/lego-house.mp3" type="audio/mp3">
-                                        Your browser does not support playing MP3s
-                                    </audio>
+                                <div class="col">
+                                    <iframe src="https://open.spotify.com/embed/album/02pi98kE0nra0yBqCStzbC"
+                                        width="250" height="80" frameborder="0" allowtransparency="true"
+                                        allow="encrypted-media">
+                                        Your browser does not support iFrames
+                                    </iframe>
                                 </div>
                             </div>
                         </div>
@@ -105,11 +108,11 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col audio-container">
-                                    <audio controls>
-                                        <source src="assets/music/photograph.mp3" type="audio/mp3">
-                                        Your browser does not support playing MP3s
-                                    </audio>
+                                <div class="col audio">
+                                    <iframe src="https://open.spotify.com/embed/album/1xn54DMo2qIqBuMqHtUsFd"
+                                        width="250" height="80" frameborder="0" allowtransparency="true"
+                                        allow="encrypted-media">
+                                        Your browser does not support iFrames</iframe>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +143,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer class="fixed-bottom">
         <!-- this part contains all the social media links, with a grey top and bottom border -->
         <div class="container-fluid no-gutters border-grey">
             <div class="row social-media bg-black font-white font-heading">
