--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
 
 
 
-
         <!-- this part below contains the logo and navigation bar, with a grey top and bottom border -->
         <div class="container-fluid no-gutters section-padding border-grey" style="padding: 0px;">
             <div class="row">
@@ -141,83 +140,73 @@
                                     <h2>Caption Text Here</h2>
                                 </div>
                             </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="assets/images/2.jpg" alt="2nd Picture of Ed Sheeran">
-                                <div class="carousel-caption">
-                                    <div>
-                                        <h2>Caption Text Here</h2>
-                                    </div>
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/3.jpg"
-                                        alt="3rd Picture of Ed Sheeran">
-                                    <div class="carousel-caption">
-                                        <div>
-                                            <h2>Caption Text Here</h2>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img class="d-block w-100" src="assets/images/4.jpg"
-                                            alt="4th Picture of Ed Sheeran">
-                                        <div class="carousel-caption">
-                                            <div>
-                                                <h2>Caption Text Here</h2>
-                                            </div>
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img class="d-block w-100" src="assets/images/5.jpg"
-                                                alt="5th Picture of Ed Sheeran">
-                                            <div class="carousel-caption">
-                                                <div>
-                                                    <h2>Caption Text Here</h2>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img class="d-block w-100" src="assets/images/6.jpg"
-                                                    alt="6th Picture of Ed Sheeran">
-                                                <div class="carousel-caption">
-                                                    <div>
-                                                        <h2>Caption Text Here</h2>
-                                                    </div>
-                                                </div>
-                                                <div class="carousel-item">
-                                                    <img class="d-block w-100" src="assets/images/7.jpg"
-                                                        alt="7th Picture of Ed Sheeran">
-                                                    <div class="carousel-caption">
-                                                        <div>
-                                                            <h2>Caption Text Here</h2>
-                                                        </div>
-                                                    </div>
-                                                    <div class="carousel-item">
-                                                        <img class="d-block w-100" src="assets/images/8.jpg"
-                                                            alt="8th Picture of Ed Sheeran">
-                                                        <div class="carousel-caption">
-                                                            <div>
-                                                                <h2>Caption Text Here</h2>
-                                                            </div>
-                                                        </div>
-                                                        <!-- below are the back and forward arrow buttons, for changing the photos -->
-                                                    </div>
-                                                    <a class="carousel-control-prev" href="#photos" role="button"
-                                                        data-slide="prev">
-                                                        <span class="carousel-control-prev-icon"
-                                                            aria-hidden="true"></span>
-                                                        <span class="sr-only">Previous</span>
-                                                    </a>
-                                                    <a class="carousel-control-next" href="#photos" role="button"
-                                                        data-slide="next">
-                                                        <span class="carousel-control-next-icon"
-                                                            aria-hidden="true"></span>
-                                                        <span class="sr-only">Next</span>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/2.jpg" alt="2nd Picture of Ed Sheeran">
+                            <div class="carousel-caption">
+                                <div>
+                                    <h2>Caption Text Here</h2>
                                 </div>
                             </div>
                         </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/3.jpg" alt="3rd Picture of Ed Sheeran">
+                            <div class="carousel-caption">
+                                <div>
+                                    <h2>Caption Text Here</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/4.jpg" alt="4th Picture of Ed Sheeran">
+                            <div class="carousel-caption">
+                                <div>
+                                    <h2>Caption Text Here</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/5.jpg" alt="5th Picture of Ed Sheeran">
+                            <div class="carousel-caption">
+                                <div>
+                                    <h2>Caption Text Here</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/6.jpg" alt="6th Picture of Ed Sheeran">
+                            <div class="carousel-caption">
+                                <div>
+                                    <h2>Caption Text Here</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/7.jpg" alt="7th Picture of Ed Sheeran">
+                            <div class="carousel-caption">
+                                <div>
+                                    <h2>Caption Text Here</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/8.jpg" alt="8th Picture of Ed Sheeran">
+                            <div class="carousel-caption">
+                                <div>
+                                    <h2>Caption Text Here</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- below are the back and forward arrow buttons, for changing the photos -->
                     </div>
+                    <a class="carousel-control-prev" href="#photos" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#photos" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
         </div>
