fixed footer to bottom of page on index

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer class="fixed-bottom">
         <!-- this part contains all the social media links, with a grey top and bottom border -->
         <div class="container-fluid no-gutters border-grey">
             <div class="row social-media bg-black font-white font-heading">
