spelling mistake in audio code - fixed

--- a/music.html
+++ b/music.html
@@ -108,7 +108,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col audio">
+                                <div class="col">
                                     <iframe src="https://open.spotify.com/embed/album/1xn54DMo2qIqBuMqHtUsFd"
                                         width="250" height="80" frameborder="0" allowtransparency="true"
                                         allow="encrypted-media">
