--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <!-- the below script is for the bootstrap carousel pictures at bottom of page -->
+    <!-- the below script is for the bootstrap carousel pictures and mobile nav bar -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -17,35 +17,35 @@
 
 <body>
     <header>
-        <!--Navbar visible only on XS screens-->
+        <!-- navigation bar which is only visible only on XS screens such as mobile devices -->
         <nav class="navbar navbar-dark bg-dark d-block d-sm-none">
-            <!-- Navbar brand -->
+            <!-- navigation bar 'active page' name and icon, aligned to left -->
             <div class="navbar-brand">
-                <h1 class="font-navigation-lrg active"><i class="fas fa-home space"></i> Home Page</h1>
+                <h1 class="font-navigation-lrg"><i class="fas fa-home space"></i> Home Page</h1>
             </div>
-
-            <!-- Collapse button -->
+            <!-- toggle button on right, which brings menu of links when pressed  -->
             <div style="position: absolute; top: 25px; right: 15px;">
-                <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false"
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#nav-menu" aria-controls="nav-menu" aria-expanded="false"
                     aria-label="Toggle navigation"><span><i class="fas fa-bars"
                             style="color: white; font-size: 42px;"></i></span></button>
             </div>
-
-            <!-- Collapsible content -->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent1">
-
-                <!-- Links -->
+            <!-- menu which appears when pressing toggle button -->
+            <div class="collapse navbar-collapse" id="nav-menu">
+                <!-- all links in the menu -->
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
+                        <!-- !important is used to override the default colour -->
+                        <!-- (current page) will show next to the active page name for screen readers only -->
                         <a class="nav-link font-navigation" href="index.html" style="color: orange !important;"><i
-                                class="fas fa-home space"></i> Home Page <span class="sr-only">(current)</span></a>
+                                class="fas fa-home space"></i> Home Page <span class="sr-only">(current page)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link font-navigation" href="music.html"><i class="fas fa-music space"></i> Music +
                             Videos</a>
                     </li>
                     <li class="nav-item">
+                        <!-- the ticketmaster link below will open in a new tab so the user doesn't guest lost -->
                         <a class="nav-link font-navigation"
                             href="https://www.ticketmaster.co.uk/ed-sheeran-tickets/artist/1560779" target="_blank"><i
                                 class="fas fa-ticket-alt space"></i> Book Tickets</a>
@@ -55,17 +55,9 @@
                             Contact Us</a>
                     </li>
                 </ul>
-                <!-- Links -->
-
             </div>
-            <!-- Collapsible content -->
-
         </nav>
-        <!--/.Navbar-->
-
-
-
-        <!-- this part below contains the logo and navigation bar, with a grey top and bottom border -->
+        <!-- this part below contains the logo, with a grey top and bottom border -->
         <div class="container-fluid no-gutters section-padding border-grey" style="padding: 0px;">
             <div class="row">
                 <!-- black space on left of logo -->
@@ -78,9 +70,7 @@
                 <div class="col-1 bg-black">
                 </div>
             </div>
-
-
-            <!-- navigation bar starts here for all sizes except XS it is hidden-->
+            <!-- navigation bar starts here for all sizes except XS, which is hidden -->
             <div class="row navigation font-white font-navigation d-none d-sm-block">
                 <!-- black space on left of navigation bar which hides when the screen gets smaller -->
                 <div class="col-lg-2 d-none d-lg-block bg-black">
@@ -106,8 +96,6 @@
                 <div class="col-md-2 d-none d-lrg-block bg-black">
                 </div>
             </div>
-
-
         </div>
     </header>
     <section>
@@ -214,7 +202,7 @@
     <footer class="fixed-bottom">
         <!-- this part contains all the social media links, with a grey top and bottom border -->
         <div class="container-fluid no-gutters border-grey">
-            <div class="row social-media bg-black font-white font-heading">
+            <div class="row social-media bg-black font-white font-heading" style="padding: 5px 20px;">
                 <!-- black space on left which hides when the screen gets smaller -->
                 <div class="col-md-3 d-none d-md-block bg-black">
                 </div>
