started fixing final page... not complete yet

--- a/contact.html
+++ b/contact.html
@@ -113,14 +113,11 @@
         <!-- this part below contains the subheading text, and main body area -->
         <div class="container-fluid no-gutters">
             <div class="row">
-                <!-- subheading which is on left side of the page, on small screen will take whole page width -->
-                <div class="d-none col-md-1 bg-grey">
-                </div>
                 <!-- main body which is on right side of the subheading, on small screen will take whole page width -->
-                <div class="col-md-10 col-sm-12 bg-white">
+                <div class="col bg-white">
                     <form id="contact-form">
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col">
                                 <label for="name" class="font-subheading font-black">Name</label>
                                 <input type="text" name="name" id="name" class="form-control" required />
                                 <label for="emailaddress" class="font-subheading font-black">Email Address</label>
@@ -135,15 +132,13 @@
                                 <label class="form-check-label" for="subscribe" style="font-size: 12px;">Check this box
                                     if you would like to subscribe to our newsletters, and get the lastest information
                                     on any future events</label>
-                                <div class="col-md-12 button-container">
+                                <div class="col button-container">
                                     <button type="submit" class="button-send font-subheading">Send Message <i
                                             class="fa fa-paper-plane" id="plane-icon"></i></button>
                                 </div>
                             </div>
                         </div>
                     </form>
-                </div>
-                                <div class="d-none col-md-1 bg-grey">
                 </div>
             </div>
         </div>
